[package]
name = "envr"
description = "Cross-platform take of POSIX's `env` command"
version = "0.1.0-pre"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/erichdongubler/envr"
keywords = []
categories = ["command-line-utilities"]
license = "MPL-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/erichdongubler/envr" }
is-it-maintained-open-issues = { repository = "https://github.com/erichdongubler/envr" }
maintenance = { status = "experimental" }
travis-ci = { repository = "erichdongubler/envr" }

[dependencies]
structopt = "0.3.14"
