[package]
name = "envr"
description = "Cross-platform take of POSIX's `env` command"
version = "0.1.2"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/erichdongubler/envr"
keywords = []
categories = ["command-line-utilities"]
license = "MPL-2.0"

[package.metadata.binstall]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.1.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/erichdongubler/envr" }
is-it-maintained-open-issues = { repository = "https://github.com/erichdongubler/envr" }
maintenance = { status = "experimental" }
travis-ci = { repository = "erichdongubler/envr" }

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
