[package]
name = "envr"
description = "Cross-platform take of POSIX's `env` command"
version = "0.1.4"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/erichdongubler/envr"
keywords = []
categories = ["command-line-utilities"]
license = "MPL-2.0"

[package.metadata.binstall]

[package.metadata.wix]
upgrade-guid = "AEE967BD-6710-44E8-9B31-E67F17964010"
path-guid = "6B9CCF5D-8A39-4936-A890-3BAB932A2B16"
license = false
eula = false

[profile.dist]
inherits = "release"
lto = "thin"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/erichdongubler/envr" }
is-it-maintained-open-issues = { repository = "https://github.com/erichdongubler/envr" }
maintenance = { status = "experimental" }
travis-ci = { repository = "erichdongubler/envr" }

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
